<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivUserPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/user_picture" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/ivUserPicture"
        android:layout_toRightOf="@+id/ivUserPicture"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvUserHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignBaseline="@+id/tvUserName"
        android:layout_alignBottom="@+id/tvUserName"
        android:layout_toRightOf="@+id/tvUserName"
        android:text="@string/user_handle"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:text="@string/tweet_message"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvUserHandle"
        android:layout_alignBottom="@+id/tvUserHandle"
        android:layout_alignParentRight="true"
        android:text="@string/tweet_date"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray" />

</RelativeLayout>
