<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:onClick="refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_action_new_email"
        android:onClick="composeTweet"
        android:orderInCategory="200"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_compose"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:onClick="onProfileView"
        android:orderInCategory="300"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_profile"/>

</menu>