<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ComposeActivity" >

    <LinearLayout
        android:id="@+id/linUserBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_picture" />

        <TextView
            android:id="@+id/tvHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/user_handle"
            android:layout_gravity="center" />
    </LinearLayout>

    <EditText
        android:id="@+id/etTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linUserBox"
        android:layout_below="@+id/linUserBox"
        android:hint="@string/tweet_hint" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linButtonBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTweet"
        android:layout_below="@+id/etTweet" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel"
            android:onClick="cancelTweet" />

        <Button
            android:id="@+id/btnTweet"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_tweet"
            android:onClick="sendTweet" />
    </LinearLayout>

</RelativeLayout>